--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -19,5 +19,5 @@ jobs:
           node-version: ${{ matrix.node_version }}
 
       - run: npm install
-      - run: npm run build --if-present
+      - run: npm run dev --if-present
       - run: npm test
