--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -11,13 +11,35 @@ jobs:
         node_version: [14.x]  # Node.js version 14.x to match your local development environment
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node_version }}
+      - name: Set up Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node_version }}
 
-      - run: npm install
-      - run: npm run dev --if-present
-      - run: npm test
+      # Install frontend dependencies (npm)
+      - name: Install frontend dependencies
+        run: npm install
+        working-directory: ./  # Specify the directory where frontend code is located
+
+      # Install backend dependencies (yarn)
+      - name: Install backend dependencies
+        run: yarn 
+        working-directory: ./backend  # Specify the directory where backend code is located
+
+   # Start the backend (if needed)
+      - name: Start backend (if present)
+        run: yarn dev --if-present
+        working-directory: ./backend 
+
+      # Start the frontend (if needed)
+      - name: Start frontend (if present)
+        run: npm run dev --if-present
+        working-directory: ./  # Specify the directory where frontend code is located
+
+      # Run tests
+      - name: Run tests
+        run: npm test
+
