--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -26,20 +26,22 @@ jobs:
 
       # Install backend dependencies (yarn)
       - name: Install backend dependencies
-        run: yarn 
+        run: yarn install
         working-directory: ./backend  # Specify the directory where backend code is located
 
-   # Start the backend (if needed)
-      - name: Start backend (if present)
-        run: npm start --if-present
-        working-directory: ./backend 
+      # Start the backend
+      - name: Build and start backend
+        run: |
+          cd ./backend  # Navigate to the backend directory
+          yarn build
+          yarn start
+        working-directory: ./backend  # Specify the directory where backend code is located
 
       # Start the frontend (if needed)
       - name: Start frontend (if present)
         run: npm run dev --if-present
-        working-directory: ./  # Specify the directory where frontend code is located
+        working-directory: ./frontend  # Specify the directory where frontend code is located
 
       # Run tests
       - name: Run tests
         run: npm test
-
