--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -11,13 +11,34 @@ jobs:
         node_version: [14.x]  # Node.js version 14.x to match your local development environment
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node_version }}
+      - name: Set up Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node_version }}
 
-      - run: npm install
-      - run: npm run build --if-present
-      - run: npm test
+      # Install frontend dependencies (npm)
+      - name: Install frontend dependencies
+        run: npm install
+
+      # Install backend dependencies (yarn)
+      - name: Install backend dependencies
+        run: yarn install
+        working-directory: ./backend  # Specify the directory where backend code is located
+
+      # Build and start the backend
+      - name: Build and start backend
+        run: |
+          yarn build
+          yarn start &
+        working-directory: ./backend  # Specify the directory where backend code is located
+
+      # Start the frontend (if needed)
+      - name: Start frontend (if present)
+        run: npm run dev --if-present &
+
+      # Run tests
+      - name: Run tests
+        run: npm test
