--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -1,40 +1,27 @@
-name: Build and Deploy
+name: Deploy to Firebase Hosting
 
-on: [push]
+on:
+  push:
+    branches:
+      - main # or your default branch
 
 jobs:
-  build-and-test:
+  deploy:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node_version: [14.x] 
-
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js ${{ matrix.node_version }}
-        uses: actions/setup-node@v1
+      - name: Install Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node_version }}
+          node-version: '14' # or the version you're using
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
 
-      - name: Build the project
-        run: npm run build
-
-      - name: Run tests
-        run: npm test
-
-  deploy:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'  # Only run deployment for the main branch
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Build Frontend
+        run: npm run build # or your build script
 
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
